# TestTask

./: CMakeLists.txt  Client.cpp  Core.cpp  Core.hpp  Order.hpp  Server.cpp  Server.hpp  ServerMain.cpp  Session.cpp  Session.hpp  UnitTests.cpp  c_cpp_properties.json  include.hpp  readme.md
Includes/: Common.hpp  Core.hpp  Order.hpp  Server.hpp  Session.hpp
src/Client/: Client.cpp
src/Server/: Core.cpp  Server.cpp  ServerMain.cpp  Session.cpp
src/Tests/: UnitTests.cpp
